# CUDAatScalefortheEnterpriseProject

./: .gitignore  CMakeLists.txt  README.md  output.txt  run.sh
images/aerials_blurred_cuda/: 2.1.01.tiff  2.1.02.tiff  2.1.03.tiff  2.1.04.tiff  2.1.05.tiff  2.1.06.tiff  2.1.07.tiff  2.1.08.tiff  2.1.09.tiff  2.1.10.tiff  2.1.11.tiff  2.1.12.tiff  2.2.01.tiff  2.2.02.tiff  2.2.03.tiff  2.2.04.tiff  2.2.05.tiff  2.2.06.tiff  2.2.07.tiff  2.2.08.tiff  2.2.09.tiff  2.2.10.tiff  2.2.11.tiff  2.2.12.tiff  2.2.13.tiff  2.2.14.tiff  2.2.15.tiff  2.2.16.tiff  2.2.17.tiff  2.2.18.tiff  2.2.19.tiff  2.2.20.tiff  2.2.21.tiff  2.2.22.tiff  2.2.23.tiff  2.2.24.tiff  3.2.25.tiff
images/aerials_blurred_npp/: 2.1.01.tiff  2.1.02.tiff  2.1.03.tiff  2.1.04.tiff  2.1.05.tiff  2.1.06.tiff  2.1.07.tiff  2.1.08.tiff  2.1.09.tiff  2.1.10.tiff  2.1.11.tiff  2.1.12.tiff  2.2.01.tiff  2.2.02.tiff  2.2.03.tiff  2.2.04.tiff  2.2.05.tiff  2.2.06.tiff  2.2.07.tiff  2.2.08.tiff  2.2.09.tiff  2.2.10.tiff  2.2.11.tiff  2.2.12.tiff  2.2.13.tiff  2.2.14.tiff  2.2.15.tiff  2.2.16.tiff  2.2.17.tiff  2.2.18.tiff  2.2.19.tiff  2.2.20.tiff  2.2.21.tiff  2.2.22.tiff  2.2.23.tiff  2.2.24.tiff  3.2.25.tiff
inc/: blur.h  utils.h
src/: blur.cu  main.cc  utils.cc
